@@ -3,6 +3,9 @@
 - Add Log::Dispatch->outputs() method. This returns all the output objects in
   a log object.
 
+- Add Log::Dispatch->callbacks() method. This returns all the callback subs in
+  a dispatch object.
+
 - Replaced Class::Load with Module::Runtime.
 
 
